Remove fixed logo positioning on mobile devices

--- a/style.css
+++ b/style.css
@@ -164,10 +164,9 @@ button[type="submit"]:hover {
 }
 @media (max-width: 700px) {
     .corner-logo {
-        width: 125px;
-        height: 125px;
-        top: 0px;
-        left: 0px;
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
     }
 }
 
